# westside_x3

./: README.md  athletic.py  foundations.py  hypertrophy.py  main.py  pyproject.toml  urls.txt  urls_athletic.txt  urls_hyp.txt
athletic/: README.md  Week 1, Day 1.txt  Week 1, Day 2.txt  Week 1, Day 3.txt  Week 2, Day 1.txt  Week 2, Day 2.txt  Week 2, Day 3.txt  Week 3, Day 1.txt  Week 3, Day 2.txt  Week 3, Day 3.txt  Week 4, Day 1.txt  Week 4, Day 2.txt  Week 4, Day 3.txt
foundations/: README.md  Week 1, Day 3.txt  Week 2, Day 2.txt  Week 2, Day 4.txt  Week 3, Day 1.txt  Week 3, Day 2.txt  Week 3, Day 3.txt  Week 3, Day 4.txt  Week 4, Day 2.txt  Week 5, Day 1.txt  Week 5, Day 2.txt  Week 5, Day 3.txt  Week 6, Day 1.txt  Week 6, Day 2.txt  Week 6, Day 3.txt  Week 7, Day 2.txt  Week 7, Day 3.txt
hypertrophy/: README.md  Week 1, Day 1.txt  Week 1, Day 2.txt  Week 1, Day 3.txt  Week 1, Day 4.txt  Week 2, Day 1.txt  Week 2, Day 2.txt  Week 2, Day 3.txt  Week 2, Day 4.txt  Week 3, Day 1.txt  Week 3, Day 2.txt  Week 3, Day 3.txt  Week 3, Day 4.txt  Week 4, Day 1.txt  Week 4, Day 2.txt  Week 4, Day 3.txt  Week 4, Day 4.txt  Week 5, Day 1.txt  Week 5, Day 2.txt  Week 5, Day 3.txt  Week 5, Day 4.txt  Week 6, Day 1.txt  Week 6, Day 2.txt  Week 6, Day 3.txt  Week 6, Day 4.txt
workouts/: Week 1, Day 1.txt  Week 1, Day 2.txt  Week 1, Day 4.txt  Week 2, Day 1.txt  Week 2, Day 3.txt  Week 4, Day 1.txt  Week 4, Day 3.txt  Week 4, Day 4.txt  Week 5, Day 4.txt  Week 6, Day 4.txt  Week 7, Day 1.txt  Week 7, Day 4.txt  Week 8, Day 1.txt  Week 8, Day 2.txt  Week 8, Day 3.txt  (+1 more)
